fix(pro:tree): empty state is not centered

--- a/packages/components/tree/style/index.less
+++ b/packages/components/tree/style/index.less
@@ -131,6 +131,12 @@
     }
   }
 
+  &.@{tree-prefix}-empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .@{tree-node-prefix} {
     position: relative;
     display: flex;
